Sun May  8 12:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkpanels.c: full screen improvments (for gtk 2.6)
	* progress.c: alloc mismatch

Wed May  4 18:10:43 GMT  2005  Jim Segrave <jes@jes-2.demon.nl>

	* eval.c: Don't use MMAP for reading weights when using sse

Fri Apr  29  20:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* progress.c: Limit list updates in rollouts to reduce flicker
		and improve speed (gtk 2.6)
	* eval.c: Minor speed improvment
	
Thu Apr  28  22:35:45 2005 Oystein Johansen <oystein@gnubg.org>

	Vectorization of neural net evaluation.

	* eval.c: Change callers to NeuralNetEvaluate to use vectorized code.
	* set.c:  Fix typo. Thanks Jim Curtis.
	
Wed Mar  30 16:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkfile.c : Allow spaces in filenames (new 2.6 file dialog),
		not tested with linux
	* gtkgame.c : Fix maximised window->full screen (gtk 2+)

Sat Mar 26 00:17:49 GMT 2005 Jim Segrave <jes@jes-2.demon.nl>

	* gtkgame.c, sound.c - fix for Cygwin FASYNC vs O_ASYNC
	  (from Ingo Macherius <macherius@web.de>

Fri Mar  11  19:25:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c (InitGTK): move the 'Go' menu to the right place
	accoring to HIG. 
	* gtkgame.c (GTKHelp): Make the command reference window a dialog.
	
Sun Mar  06  18:00:45 2005 Oystein Johansen <oystein@gnubg.org>

	* gtkgame.c InitGTK(): Exclude GTK_STOCK_ABOUT when gtkversion < 2.6

Sat Mar  05  23:50:45 2005 Oystein Johansen <oystein@gnubg.org>

	This is the first commit in a large GUI cleanup I intend to do.

	Cleanup in the menu system. Simplify all the 'File' menues. Rearrange
	accoring to Human Interface Guidlines 2.0 (HIG 2.0). Add some stock
	icons to some of the menu items. Please comment on the stock items.

	* gtkgame.[ch], gtkpanels.c, gtktoolbar.c: Menu cleanup.
	
Fri Feb  25  11:56:45 2005 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtk(some).c : Make event boxes transparent (By Ingo Macherius)
